#FEAT: 1주차 기본 과제 구현 #1 Colab을 통해 생성됨

--- a/(1주차_기본)_MNIST.ipynb
+++ b/(1주차_기본)_MNIST.ipynb
@@ -28,7 +28,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jylee9018/TIL-Tasks/blob/main/(1%EC%A3%BC%EC%B0%A8_%EA%B8%B0%EB%B3%B8)_MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jylee9018/TIL-Tasks/blob/feat%2F%231/(1%EC%A3%BC%EC%B0%A8_%EA%B8%B0%EB%B3%B8)_MNIST.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
